--- a/firebase/public/index.html
+++ b/firebase/public/index.html
@@ -1,30 +1,65 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1.0, width=device-width" />
-    <title>Welcome to Firebase Hosting</title>
+<html class="is-clipped">
 
-    <link rel="stylesheet" type="text/css" href="https://js.api.here.com/v3/3.0/mapsjs-ui.css?dp-version=1542186754" />
-    <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-core.js"></script>
-    <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-service.js"></script>
-    <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-ui.js"></script>
-    <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-mapevents.js"></script>    
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1.0, width=device-width" />
+  <title>parame.tech</title>
+  <link rel="shortcut icon" type="image/png" href="img/logo.png"/>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/5.7.0/firebase-app.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/5.7.0/firebase-auth.js"></script>
-    <script defer src="/__/firebase/5.7.0/firebase-firestore.js"></script>
-    <script defer src="/__/firebase/5.7.0/firebase-messaging.js"></script>
-    <script defer src="/__/firebase/5.7.0/firebase-storage.js"></script>
-    <!-- initialize the SDK after all desired features are loaded -->
-    <script defer src="/__/firebase/init.js"></script>
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-    <h1 id="beds">...</h1>
-    <div id="mapContainer"></div>
-    <script src="js/main.js"></script>
-  </body>
+  <link rel="stylesheet" type="text/css" href="https://js.api.here.com/v3/3.0/mapsjs-ui.css?dp-version=1542186754" />
+  <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-core.js"></script>
+  <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-service.js"></script>
+  <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-ui.js"></script>
+  <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-mapevents.js"></script>
+
+  <!-- update the version number as needed -->
+  <script defer src="/__/firebase/5.7.0/firebase-app.js"></script>
+  <!-- include only the Firebase features as you need -->
+  <script defer src="/__/firebase/5.7.0/firebase-auth.js"></script>
+  <script defer src="/__/firebase/5.7.0/firebase-firestore.js"></script>
+  <script defer src="/__/firebase/5.7.0/firebase-messaging.js"></script>
+  <script defer src="/__/firebase/5.7.0/firebase-storage.js"></script>
+  <!-- initialize the SDK after all desired features are loaded -->
+  <script defer src="/__/firebase/init.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body class="is-clipped">
+  <div id="bg-img"></div>
+  <section id="landing" class="hero is-dark is-fullheight">
+    <div class="hero-body">
+      <div class="container">
+        <img src="img/logo.png" class="image is-96x96 is-inline" />
+        <h1 class="title">
+          parame.tech
+        </h1>
+        <h2 class="subtitle">
+          est. 2018; cum cafea voluntateque aluit
+        </h2>
+        <a class="button is-large is-primary" onclick="$('body').addClass('entered')">
+          <span>enter</span>
+          <span class="icon">
+            <i class="fas fa-arrow-right"></i>
+          </span>
+        </a>
+      </div>
+    </div>
+  </section>
+  <div class="columns is-gapless">
+    <div class="column is-one-third">
+      <div id="sidebar"></div>
+    </div>
+    <div class="column" id="mapContainer"></div>
+  </div>
+  <script src="js/sidebar.js"></script>
+  <script src="js/here.js"></script>
+  <script src="js/firebase.js"></script>
+  <script src="js/main.js"></script>
+</body>
+
 </html>
